# agent-tools

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md  hubspot-build-guide.md
src/: mcp_server.py
src/tools/: parse_email.py  transcript_fetch.py
src/tools/conversions/: __init__.py  docx_to_markdown.py  pdf_to_markdown.py
src/tools/hubspot/: __init__.py  add_note.py  create_company.py  create_contact.py  create_deal.py  get_company.py  get_company_projects.py  get_contact.py  get_deal.py  list_users.py  log_call.py  log_meeting.py  search_calls.py  search_companies.py  search_contacts.py  search_deals.py  search_emails.py  search_meetings.py  search_notes.py  update_company.py  update_contact.py  update_deal.py
