[project]
name = "agent-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "dotenv>=0.9.9",
    "extract-msg>=0.55.0",
    "markitdown[docx,pdf]>=0.1.5",
    "mcp>=1.25.0",
    "msal>=1.34.0",
    "msal-extensions>=1.3.1",
    "requests>=2.32.5",
    "tzdata>=2025.3",
]
